# extension-cpp

./: CONTRIBUTING.md  README.md  benchmark.py  check.py  grad_check.py  pyproject.toml  setup.py
.github/: tests.yml
.github/scripts/: setup-env.sh  unittest.sh
.github/workflows/: tests.yml
cpp/: lltm.cpp  lltm.py  setup.py
cuda/: lltm.py  lltm_cuda.cpp  lltm_cuda_kernel.cu
extension_cpp/: __init__.py  ops.py
extension_cpp/csrc/: lltm.cpp  muladd.cpp
extension_cpp/csrc/cuda/: lltm_cuda.cu  muladd.cu
extension_cpp/csrc/include/extension/: fast_sigmoid.h
extension_cpp/csrc/sycl/: muladd.sycl
extension_cpp_cmake/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
extension_cpp_cmake/csrc/cpp/: lltm.cpp
extension_cpp_cmake/csrc/cuda/: lltm_cuda.cu
extension_cpp_cmake/csrc/include/: saturated_cast.h  utils.h
extension_cpp_cmake/extension_cpp/: __init__.py  abstract_impls.py
extension_cpp_cmake/test/: benchmark.py  test_extension.py
extension_template/: CMakeLists.txt  pyproject.toml
extension_template/my_extension/: __init__.py  abstract_impls.py
python/: lltm.py  lltm_baseline.py
test/: benchmark.py  test_extension.py
